# ChangeLog for net-analyzer/openvas-scanner
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-scanner/ChangeLog,v 1.11 2014/10/01 11:02:39 jlec Exp $

  01 Oct 2014; Justin Lecher <jlec@gentoo.org> openvas-scanner-4.0.3-r2.ebuild:
  Drop unneeded dep on cmake; prefix love

*openvas-scanner-4.0.3-r2 (30 Sep 2014)

  30 Sep 2014; Justin Lecher <jlec@gentoo.org>
  +openvas-scanner-4.0.3-r2.ebuild, +files/openvas-scanner-4.0.3-run.patch,
  files/openvassd.init, files/openvassd.service, files/openvassd.tmpfiles.d,
  files/openvassd-daemon.conf:
  Correct pidfile location

*openvas-scanner-5.0_beta2 (29 Sep 2014)

  29 Sep 2014; Justin Lecher <jlec@gentoo.org>
  +openvas-scanner-5.0_beta2.ebuild:
  Version Bump

  29 Sep 2014; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add myself as maintainer

*openvas-scanner-4.0.3-r1 (28 Sep 2014)

  28 Sep 2014; Justin Lecher <jlec@gentoo.org> -openvas-scanner-4.0.3.ebuild,
  +openvas-scanner-4.0.3-r1.ebuild,
  +files/openvas-scanner-4.0.3-bsdsource.patch,
  +files/openvas-scanner-4.0.3-mkcertclient.patch,
  +files/openvas-scanner-4.0.3-rulesdir.patch, +files/openvas-nvt-sync-cron,
  +files/openvassd.conf, files/openvassd.init, +files/openvassd.logrotate,
  files/openvassd.service, +files/openvassd-daemon.conf:
  Import fedora patches

*openvas-scanner-4.0.3 (28 Sep 2014)

  28 Sep 2014; Justin Lecher <jlec@gentoo.org> +openvas-scanner-4.0.3.ebuild,
  +files/openvassd.init, +files/openvassd.service, +files/openvassd.tmpfiles.d,
  metadata.xml:
  Version BUmp; add systemd support

*openvas-scanner-4.0.1 (19 Jun 2014)

  19 Jun 2014; Hanno Boeck <hanno@gentoo.org> +openvas-scanner-4.0.1.ebuild:
  Bump.

  15 Sep 2013; Markus Meier <maekke@gentoo.org> openvas-scanner-3.4.0.ebuild:
  add ~arm, bug #389453

*openvas-scanner-3.4.0 (01 Jul 2013)

  01 Jul 2013; Hanno Boeck <hanno@gentoo.org> +openvas-scanner-3.4.0.ebuild: