@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/openvas-scanner
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-scanner/ChangeLog,v 1.11 2014/10/01 11:02:39 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-scanner/ChangeLog,v 1.12 2014/10/01 13:03:13 jlec Exp $
+
+*openvas-scanner-4.0.3-r3 (01 Oct 2014)
+
+  01 Oct 2014; Justin Lecher <jlec@gentoo.org>
+  +openvas-scanner-4.0.3-r3.ebuild, files/openvassd.init:
+  Add initial cache generation to init-script
 
   01 Oct 2014; Justin Lecher <jlec@gentoo.org> openvas-scanner-4.0.3-r2.ebuild:
   Drop unneeded dep on cmake; prefix love
